# ansible-role-openproject

./: LICENSE  README.md  pyproject.toml
.github/workflows/: .molecule.yml  molecule.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: .ansible-lint  converge.yml  destroy.yml  molecule.yml  prepare.yml  verify.yml
tasks/: main.yml
